VI-182 - messy language

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-cancelled-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-cancelled-page.html.twig
@@ -1,13 +1,11 @@
 <div class="container">
   <br>
-  <h3>
-  {{ "Din ordre blev annulleret!"|t }}
-  </h3>
+  <h3>{{ "Your order was cancelled!"|t }}</h3>
   <br>
   <div class="row">
       <div class="col-xs-12 tilmeldings-knap">
           <a href="{{ url('<front>') }}" class="btn-arrow">
-              {{ "Tilbage til forside"|t }}
+              {{ "Go back"|t }}
           </a>
       </div>
   </div>
