--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-error-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-error-page.html.twig
@@ -1,13 +1,13 @@
 <div class="container">
   <br>
   <h3>
-    {{ "Noget gik galt!"|t }}
+    {{ "Oh - an error occured!"|t }}
   </h3>
   <br>
   <div class="row">
       <div class="col-xs-12 tilmeldings-knap">
           <a href="{{ url('<front>') }}" class="btn-arrow">
-              {{ "Tilbage til forside"|t }}
+              {{ "Go back"|t }}
           </a>
       </div>
   </div>
