--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
@@ -9,12 +9,12 @@
             <div class="partial">
                 <div class="partial__heading">
                     <h2 class="partial__heading__title">
-                        {{ "Tilmelding til @title"|t({ '@title': form['#course']['title'] }) }}
+                        {{ "Sign up for @title"|t({ '@title': form['#course']['title'] }) }}
                     </h2>
                 </div>
                 <div class="partial__body">
                     <p>
-                        {{ "Du kan tilmelde så mange mennesker, som du har lyst til. Du tilføjer en person ad gangen i nedenstående formular."|t }}
+                        {{ "You can sign up, as many as you'd like. You will add one person at a time in the form below."|t }}
                     </p>
 
                     <a href="{{ form['#course']['url'] }}" class="btn btn-default btn-sm">
