--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
@@ -1,13 +1,13 @@
 <div class="container">
   <h3>
-    {{ "Tak for din tilmelding!"|t }}
+    {{ "Thank you for signing up!"|t }}
   </h3>
   <br>
 
   <div class="row">
     <div class="col-xs-12 tilmeldings-knap">
       <a href="{{ url('<front>') }}" class="btn btn-success">
-        {{ "Tilbage til forside"|t }}
+        {{ "Go back"|t }}
       </a>
     </div>
   </div>
