--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
@@ -1,14 +1,13 @@
-<div class="container">
-  <h3>
-    {{ "Thank you for signing up!"|t }}
-  </h3>
-  <br>
+<section class="sectioned sectioned--content">
+  <div class="sectioned__inner">
+    <div class="container">
+      <div class="sectioned__heading">
+        <h2 class="sectioned__heading__title">{{ "Thank you for signing up!"|t }}</h2>
+      </div>
 
-  <div class="row">
-    <div class="col-xs-12 tilmeldings-knap">
-      <a href="{{ url('<front>') }}" class="btn btn-success">
-        {{ "Go back"|t }}
+      <a href="{{ url('<front>') }}" class="btn btn-primary">
+          {{ "Go back to home"|t }}
       </a>
     </div>
   </div>
-</div>
+</section>
