VI-179 field_vih_link styles

--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_class-groups-accordion.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_class-groups-accordion.scss
@@ -22,7 +22,7 @@
 
 .paragraph--type--vih-class-groups-accordion {
 
-  .field--name-field-link {
+  .field--name-field-vih-link {
     margin-top: 50px;
   }
 }
