--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_employee.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_employee.scss
@@ -26,7 +26,7 @@ $lg-paragraph-action-heading-margin-bottom: 50px;
     margin-bottom: 50px;
   }
 
-  .field--name-field-link {
+  .field--name-field-vih-link {
     margin-top: 50px;
 
     text-align: center;
