--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_file.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_file.scss
@@ -29,7 +29,7 @@ $lg-paragraph-action-heading-margin-bottom: 100px;
       margin-top: 50px;
     }
 
-    + .field--name-field-link {
+    + .field--name-field-vih-link {
       margin-top: 50px;
     }
   }
@@ -37,12 +37,12 @@ $lg-paragraph-action-heading-margin-bottom: 100px;
   .field--name-file {
     text-align: center;
 
-    + .field--name-field-link {
+    + .field--name-field-vih-link {
       margin-top: 50px;
     }
   }
 
-  .field--name-field-link {
+  .field--name-field-vih-link {
     text-align: center;
   }
 }
