--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_long-course-list.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_long-course-list.scss
@@ -22,7 +22,7 @@
 
 .paragraph--type--long-course-list- {
 
-  .field--name-field-link {
+  .field--name-field-vih-link {
     margin-top: 50px;
 
     text-align: center;
