--- a/docroot/themes/custom/site/src/styles/theme/components/_banner.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_banner.scss
@@ -54,7 +54,7 @@ $lg-banner-title-font-size: 46px;
   background-size: cover;
 
   // Actions
-  .field--name-field-link {
+  .field--name-field-vih-link {
     margin-top: 50px;
 
     text-align: center;
