--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_link.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_link.scss
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .field--name-field-link
+// | - .field--name-field-vih-link
 // |
 
 // --------------------------------------------------
@@ -16,7 +16,7 @@
 
 .paragraph {
 
-  .field--name-field-link {
+  .field--name-field-vih-link {
 
     a {
       @extend .btn;
@@ -33,7 +33,7 @@
   // Background image
   &.sectioned--skewed--background-image {
 
-    .field--name-field-link {
+    .field--name-field-vih-link {
 
       a {
         @extend .btn-primary;
@@ -44,7 +44,7 @@
   // White
   &.sectioned--skewed--background-color-white {
 
-    .field--name-field-link {
+    .field--name-field-vih-link {
 
       a {
         @extend .btn-primary;
@@ -55,7 +55,7 @@
   // Light gray
   &.sectioned--skewed--background-color-light-gray {
 
-    .field--name-field-link {
+    .field--name-field-vih-link {
 
       a {
         @extend .btn-primary;
@@ -66,7 +66,7 @@
   // Gray
   &.sectioned--skewed--background-color-gray {
 
-    .field--name-field-link {
+    .field--name-field-vih-link {
 
       a {
         @extend .btn-primary;
@@ -77,7 +77,7 @@
   // Primary
   &.sectioned--skewed--background-color-primary {
 
-    .field--name-field-link {
+    .field--name-field-vih-link {
 
       a {
         @extend .btn-default;
@@ -88,7 +88,7 @@
   // Secondary
   &.sectioned--skewed--background-color-secondary {
 
-    .field--name-field-link {
+    .field--name-field-vih-link {
 
       a {
         @extend .btn-primary;
@@ -136,4 +136,4 @@
 // --------------------------------------------------
 
 // Link mixin
-@mixin field--name-mixin-field-link() {}
+@mixin field--name-mixin-field-vih-link() {}
