--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_1-column-action-centered.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_1-column-action-centered.scss
@@ -25,12 +25,12 @@ $lg-paragraph-action-heading-margin-bottom: 100px;
   .field--name-field-description {
     text-align: center;
 
-    + .field--name-field-link {
+    + .field--name-field-vih-link {
       margin-top: 50px;
     }
   }
 
-  .field--name-field-link {
+  .field--name-field-vih-link {
     text-align: center;
   }
 }
