--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_gallery.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_gallery.scss
@@ -24,12 +24,12 @@ $lg-paragraph-action-heading-margin-bottom: 50px;
 
   .field--name-field-images {
 
-    + .field--name-field-link {
+    + .field--name-field-vih-link {
       margin-top: 50px;
     }
   }
 
-  .field--name-field-link {
+  .field--name-field-vih-link {
     text-align: center;
   }
 }
