VI-179 field_vih_link templates

--- a/docroot/themes/custom/site/templates/block/block--bundle--notify.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--bundle--notify.html.twig
@@ -20,7 +20,7 @@
                 {# End - heading #}
 
                 {# Begin - link #}
-                {{ content.field_link }}
+                {{ content.field_vih_link }}
                 {# End - link #}
 
             </div>
