--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-class-groups-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-class-groups-accordion.html.twig
@@ -29,7 +29,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
                     {# End - groups #}
 
                     {# Begin - link #}
-                    {{ content.field_link }}
+                    {{ content.field_vih_link }}
                     {# End - link #}
                     
                 </div>
