--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--user-quote.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--user-quote.html.twig
@@ -71,7 +71,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
                     {# End - person #}
 
                     {# Begin - link #}
-                    {{ content.field_link }}
+                    {{ content.field_vih_link }}
                     {# End - link #}
 
                 </div>
