VI-179 field_vih_paragraphs CSS and templates

--- a/docroot/themes/custom/site/templates/node/full/node--page.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--page.html.twig
@@ -50,7 +50,7 @@ view_mode ? view_mode|clean_class,
     {# End - content #}
 
     {# Begin - paragraphs #}
-    {{ content.field_paragraphs }}
+    {{ content.field_vih_paragraphs }}
     {# End - paragraphs #}
 
 </article>
