--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -269,7 +269,7 @@ view_mode ? view_mode|clean_class,
     <!-- End - content -->
 
     {# Begin - paragraphs #}
-    {{ content.field_paragraphs }}
+    {{ content.field_vih_paragraphs }}
     {# End - paragraphs #}
 
 </article>
