--- a/docroot/themes/custom/site/templates/user/full/user.html.twig
+++ b/docroot/themes/custom/site/templates/user/full/user.html.twig
@@ -62,7 +62,7 @@
     <!-- End - content -->
 
     {# Begin - paragraphs #}
-    {{ content.field_paragraphs }}
+    {{ content.field_vih_paragraphs }}
     {# End - paragraphs #}
 
 </article>
