VI-179 field_field_vih_highlighted_text styles

--- a/docroot/themes/custom/site/templates/block/block--bundle--notify.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--bundle--notify.html.twig
@@ -2,9 +2,9 @@
     <aside{{ attributes.addClass('notify') }}>
 
         {# Begin - highlighted text #}
-        {% if content.field_highlighted_text %}
+        {% if content.field_vih_highlighted_text %}
             <div class="notify__highlighted">
-                {{ content.field_highlighted_text }}
+                {{ content.field_vih_highlighted_text }}
             </div>
         {% endif %}
         {# End - highlighted text #}
