VI-179 field_vih_image styles

--- a/docroot/themes/custom/site/src/styles/theme/components/_header.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_header.scss
@@ -334,11 +334,11 @@ $breakpoint-mobile-to-tablet: "screen and (max-width: #{$screen-sm-max})";
     width: 100%;
   }
 
-  .news-panel .views-field-field-image {
+  .news-panel .views-field-field-vih-image {
     width: 100%;
   }
 
-  .news-panel .views-field-field-image img {
+  .news-panel .views-field-field-vih-image img {
     max-width: inherit!important;
     width: 100%;
   }
@@ -359,7 +359,7 @@ $breakpoint-mobile-to-tablet: "screen and (max-width: #{$screen-sm-max})";
   .news-panel .image-overlay {
     background-size: 150%;
   }
-  .layout__news .views-field-field-image .field-content {
+  .layout__news .views-field-field-vih-image .field-content {
     width: 100%;
   }
   .news-banner {
