--- a/docroot/themes/custom/site/src/styles/theme/entity/node/full/_event.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/full/_event.scss
@@ -21,7 +21,7 @@
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
-        & .field_image {
+        & .field_vih_image {
           position: relative;
           width: 100%;
           height: 100%;
