--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
@@ -33,7 +33,7 @@
             </td>
             <td class="col-xs-6 multiple-elements">
                 {% if content.description|render is not empty %}
-                    <div class="field-image-wrapper">{{ content.description }}</div>
+                    <div class="field-vih-image-wrapper">{{ content.description }}</div>
                 {% endif %}
                 <a href="{{ url }}" class="btn-more">
                     <span class="icon icon-info-circle" aria-hidden="true"></span>
@@ -55,7 +55,7 @@
         </div>
         <div class="col-xs-6 vih-col-center">
            {% if content.description|render is not empty %}
-    <div class="field-image-wrapper">{{ content.description }}</div>
+    <div class="field-vih-image-wrapper">{{ content.description }}</div>
   {% endif %}
         </div>
     </div>
