VI-179 node field_vih_event_end_date templates

--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -90,7 +90,7 @@ view_mode ? view_mode|clean_class,
                                                         {{ content.field_event_start_date }}
                                                     </div>
                                                     <div class="time-period__list__item">
-                                                        {{ content.field_event_end_date }}
+                                                        {{ content.field_vih_event_end_date }}
                                                     </div>
                                                 </div>
                                             </div>
