VI-179 node field_vih_event_end_date templates

--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -72,7 +72,7 @@ view_mode ? view_mode|clean_class,
                             <div class="col-xs-12 col-sm-6">
 
                                 {# Begin - period #}
-                                {% if node.field_event_start_date.value %}
+                                {% if node.field_vih_event_start_date.value %}
                                     <!-- Begin - time period -->
                                     <div class="boxy boxy--time-period">
                                         <div class="boxy__heading">
@@ -87,7 +87,7 @@ view_mode ? view_mode|clean_class,
 
                                                 <div class="time-period__list">
                                                     <div class="time-period__list__item">
-                                                        {{ content.field_event_start_date }}
+                                                        {{ content.field_vih_event_start_date }}
                                                     </div>
                                                     <div class="time-period__list__item">
                                                         {{ content.field_vih_event_end_date }}
