VI-179 field_vih_event_price logics and template

--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -101,7 +101,7 @@ view_mode ? view_mode|clean_class,
                                 {# End - period #}
 
                                 {# Begin - price #}
-                                {% if content.field_event_price %}
+                                {% if content.field_vih_event_price %}
                                     <!-- Begin - price -->
                                     <div class="boxy boxy--price">
                                         <div class="boxy__heading">
@@ -109,7 +109,7 @@ view_mode ? view_mode|clean_class,
                                         </div>
 
                                         <div class="boxy__body">
-                                            {{ content.field_event_price }}
+                                            {{ content.field_vih_event_price }}
                                         </div>
                                     </div>
                                     <!-- End - price -->
