VI-179 paragraph field_vih_author css and templates

--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--user-quote.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--user-quote.html.twig
@@ -43,7 +43,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 
                                     {# Begin - author #}
                                     <footer>
-                                        <cite>{{ content.field_author }}</cite>
+                                        <cite>{{ content.field_vih_author }}</cite>
                                     </footer>
                                     {# End - author #}
 
@@ -61,7 +61,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 
                             {# Begin - author #}
                             <footer>
-                                <cite>{{ content.field_author }}</cite>
+                                <cite>{{ content.field_vih_author }}</cite>
                             </footer>
                             {# End - author #}
 
