VI-179 User field_vih_user_email templates

--- a/docroot/themes/custom/site/templates/user/full/user.html.twig
+++ b/docroot/themes/custom/site/templates/user/full/user.html.twig
@@ -45,7 +45,7 @@
                         {# End - user picture #}
 
                         {# Begin - e-mail address #}
-                        {{ content.field_e_mail }}
+                        {{ content.field_vih_user_email }}
                         {# End - e-mail address #}
 
                         {# Begin - phone #}
