VI-179 User field_vih_user_birthday templates

--- a/docroot/themes/custom/site/templates/field/field--taxonomy-term--field-related-teachers--vih-class.html.twig
+++ b/docroot/themes/custom/site/templates/field/field--taxonomy-term--field-related-teachers--vih-class.html.twig
@@ -53,8 +53,8 @@
   ]
 %}
 
->>> HER {{ content.field_user_birthday }} HER <<<<
->>> HER {{ content.field_user_birthday[0] }} HER <<<<
+>>> HER {{ content.field_vih_user_birthday }} HER <<<<
+>>> HER {{ content.field_vih_user_birthday[0] }} HER <<<<
 
 {% if label_hidden %}
   {% if multiple %}
