VI-179 User field_vih_user_name_first settings and templates

--- a/docroot/themes/custom/site/templates/user/compact/user--compact.html.twig
+++ b/docroot/themes/custom/site/templates/user/compact/user--compact.html.twig
@@ -9,10 +9,10 @@
         </td>
         <td class="hidden-xs">
           <h3>
-            {{ user.field_user_name_first.value }}
+            {{ user.field_vih_user_name_first.value }}
             {{ user.field_user_name_last.value }}
           </h3>
-          {{ content|without("field_vih_user_title", "field_vih_user_phone", "field_vih_user_photo", "field_user_name_first", "field_user_name_last") }}
+          {{ content|without("field_vih_user_title", "field_vih_user_phone", "field_vih_user_photo", "field_vih_user_name_first", "field_user_name_last") }}
         </td>
         <td class="teacher-contact-info hidden-xs">
           <h5>{{ "Contact information"|trans }}:</h5>
@@ -27,10 +27,10 @@
       <tr class="visible-xs">
         <td colspan="2">
           <h3>
-            {{ user.field_user_name_first.value }}
+            {{ user.field_vih_user_name_first.value }}
             {{ user.field_user_name_last.value }}
           </h3>
-          {{ content|without("field_vih_user_title", "field_vih_user_phone", "field_vih_user_photo", "field_user_name_first", "field_user_name_last") }}
+          {{ content|without("field_vih_user_title", "field_vih_user_phone", "field_vih_user_photo", "field_vih_user_name_first", "field_user_name_last") }}
         </td>
       </tr>
       <tr class="visible-xs">
