--- a/docroot/themes/custom/site/templates/user/teaser/user--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/user/teaser/user--teaser.html.twig
@@ -8,7 +8,7 @@
         {% if user.field_vih_user_job_title.value %}
             <div class="entity-teaser__image__overlay">
                 <div>
-                    <span class="heading-h4">{{ user.field_vih_user_name_first.value }} {{ user.field_user_name_last.value }}</span>
+                    <span class="heading-h4">{{ user.field_vih_user_name_first.value }} {{ user.field_vih_user_name_last.value }}</span>
                 </div>
                 <div>
                     <span class="heading-h5">{{ user.field_vih_user_job_title.value }}</span>
@@ -17,7 +17,7 @@
         {% else %}
             <div class="entity-teaser__image__overlay">
                 <div>
-                    <span class="heading-h4">{{ user.field_vih_user_name_first.value }} {{ user.field_user_name_last.value }}</span>
+                    <span class="heading-h4">{{ user.field_vih_user_name_first.value }} {{ user.field_vih_user_name_last.value }}</span>
                 </div>
             </div>
         {% endif %}
