VI-179 paragraph Text field_vih_paragraphs_body styles

--- a/docroot/themes/custom/site/src/styles/theme/components/_header.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_header.scss
@@ -330,7 +330,7 @@ $breakpoint-mobile-to-tablet: "screen and (max-width: #{$screen-sm-max})";
     height: auto;
   }
 
-  .news-panel .views-field-body {
+  .news-panel .views-field-vih-paragraphs-body {
     width: 100%;
   }
 
