--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_article.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_article.scss
@@ -22,7 +22,7 @@ $lg-paragraph-action-heading-margin-bottom: 50px;
 // Article
 .paragraph--type--article {
 
-  .field--name-field-body {
+  .field--name-field-vih-paragraphs-body {
 
     + .field--name-field-vih-link {
       margin-top: 50px;
