--- a/docroot/themes/custom/site/src/styles/theme/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_page-layout.scss
@@ -669,7 +669,7 @@ flex-direction: column;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-.layout__news .views-field-body {
+.layout__news .views-field-vih-paragraphs-body {
   height: 150px;
 }
 .field-content {
