VI-179 paragraph vih_teacher_class_description field_vih_description styles and templates

--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
@@ -40,7 +40,7 @@
                                             {# End - heading #}
 
                                             {# Begin - description #}
-                                            {{ content.field_description }}
+                                            {{ content.field_vih_description }}
                                             {# End - description #}
 
                                         </div>
@@ -55,7 +55,7 @@
                                     {# End - heading #}
 
                                     {# Begin - description #}
-                                    {{ content.field_description }}
+                                    {{ content.field_vih_description }}
                                     {# End - description #}
 
                                 </div>
