--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--user-quote.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--user-quote.html.twig
@@ -25,12 +25,12 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
                     {# End - heading #}
 
                     {# Begin - person #}
-                    {% if paragraph.field_paragraph_person_photo.value %}
+                    {% if paragraph.field_vih_person_photo.value %}
                         <div class="row row--equal-height-columns">
                             <div class="col-xs-12 col-sm-4 col-md-3">
 
                                 {# Begin - photo #}
-                                {{ content.field_paragraph_person_photo }}
+                                {{ content.field_vih_person_photo }}
                                 {# End - photo #}
 
                             </div>
