VI-179 paragraph Udtalelse field_vih_text css and template

--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--user-quote.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--user-quote.html.twig
@@ -38,7 +38,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
                                 <blockquote>
 
                                     {# Begin - quote #}
-                                    {{ content.field_paragraph_text }}
+                                    {{ content.field_vih_text }}
                                     {# End - quote #}
 
                                     {# Begin - author #}
@@ -56,7 +56,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
                         <blockquote>
 
                             {# Begin - quote #}
-                            {{ content.field_paragraph_text }}
+                            {{ content.field_vih_text }}
                             {# End - quote #}
 
                             {# Begin - author #}
