--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
@@ -23,12 +23,12 @@
                     <div class="boxy">
                         <div class="boxy__body">
 
-                            {% if paragraph.field_photo.value %}
+                            {% if paragraph.field_vih_photo.value %}
                                 <div class="row row--equal-height-columns">
                                     <div class="col-xs-12 col-sm-4 col-md-3">
 
                                         {# Begin - photo #}
-                                        {{ content.field_photo }}
+                                        {{ content.field_vih_photo }}
                                         {# End - photo #}
 
                                     </div>
