VI-179 field-heading styles and template fix

--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
@@ -36,7 +36,7 @@
                                         <div class="content">
 
                                             {# Begin - heading #}
-                                            {{ content.field_heading }}
+                                            {{ content.field_vih_heading }}
                                             {# End - heading #}
 
                                             {# Begin - description #}
@@ -51,7 +51,7 @@
                                 <div class="content">
 
                                     {# Begin - heading #}
-                                    {{ content.field_heading }}
+                                    {{ content.field_vih_heading }}
                                     {# End - heading #}
 
                                     {# Begin - description #}
