--- a/docroot/themes/custom/site/templates/block/block--bundle--notify.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--bundle--notify.html.twig
@@ -16,7 +16,7 @@
             <div class="notify__content">
 
                 {# Begin - heading #}
-                {{ content.field_heading }}
+                {{ content.field_vih_heading }}
                 {# End - heading #}
 
                 {# Begin - link #}
