--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-class-groups-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-class-groups-accordion.html.twig
@@ -21,7 +21,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
                 <div class="container">
 
                     {# Begin - heading #}
-                    {{ content.field_heading }}
+                    {{ content.field_vih_heading }}
                     {# End - heading #}
 
                     {# Begin - groups #}
