--- a/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class.html.twig
@@ -16,12 +16,12 @@ view_mode ? view_mode|clean_class,
                     <div class="partial__body">
 
                         {# Begin - headings #}
-                        {% if term.field_heading.value or term.field_vih_subheading.value %}
+                        {% if term.field_vih_heading.value or term.field_vih_subheading.value %}
 
-                            {% if term.field_heading.value %}
+                            {% if term.field_vih_heading.value %}
                                 <!-- Begin - heading -->
                                 <div class="sectioned__heading">
-                                    <h2 class="sectioned__heading__title">{{ content.field_heading.0 }}</h2>
+                                    <h2 class="sectioned__heading__title">{{ content.field_vih_heading.0 }}</h2>
                                 </div>
                                 <!-- End - heading -->
                             {% endif %}
